Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.6
-
None
-
Linux dev-gmx001 2.6.31.8-GMX-CORE2_64 #1 SMP Tue Dec 15 10:21:34 CET 2009 x86_64 Intel(R) Xeon(R) CPU E5405 @ 2.00GHz GenuineIntel GNU/Linux
Debian GNU/Linux 3.1
gcc version 4.3.3 (Debian 4.3.3-13.1)
Description
Hi,
with the following code we are able to reproduce a fd leak:
#include <qpid/client/Connection.h>
int main(int argc, char** argv)
{
while (1)
}
When closing the connection explicitely as shown in the comment the fd leak no longer occurs. It seems that the destructor of Connection lacks closing the connection.
Regards,
Daniel