Add comment that destructor doesn't close connection; see QPID-2395

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@908706 13f79535-47bb-0310-9956-ffa450edef68